--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,5 +33,23 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     # Runs a single command using the runners shell
-    - name: Send greeting
-      run: echo "Hello ${{ inputs.set_release }}"
+    - name: Initialize the environment
+      run: |
+        echo "Hello ${{ inputs.set_release }}"
+        apt install gcc gcc-aarch64-linux-gnu bc bison build-essential coccinelle \
+          device-tree-compiler dfu-util efitools flex gdisk graphviz imagemagick \
+          liblz4-tool libgnutls28-dev libguestfs-tools libncurses-dev \
+          libpython3-dev libsdl2-dev libssl-dev lz4 lzma lzma-alone openssl \
+          pkg-config python3 python3-asteval python3-coverage python3-filelock \
+          python3-pkg-resources python3-pycryptodome python3-pyelftools \
+          python3-pytest python3-pytest-xdist python3-sphinxcontrib.apidoc \
+          python3-sphinx-rtd-theme python3-subunit python3-testtools \
+          python3-virtualenv swig uuid-dev
+        pwd
+        ls
+    - name: Checkout git repo
+      uses: actions/checkout@v2
+    - name: Compile
+      run: |
+        make CROSS_COMPILE=aarch64-none-elf- x96max-plus_defconfig
+        make CROSS_COMPILE=aarch64-none-elf-
