--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,7 @@ jobs:
     - name: Initialize the environment
       run: |
         echo "Hello ${{ inputs.set_release }}"
-        sudo apt install gcc gcc-aarch64-linux-gnu bc bison build-essential coccinelle \
+        sudo apt install --quiet gcc gcc-aarch64-linux-gnu bc bison build-essential coccinelle \
           device-tree-compiler dfu-util efitools flex gdisk graphviz imagemagick \
           liblz4-tool libgnutls28-dev libguestfs-tools libncurses-dev \
           libpython3-dev libsdl2-dev libssl-dev lz4 lzma lzma-alone openssl \
@@ -45,11 +45,10 @@ jobs:
           python3-pytest python3-pytest-xdist python3-sphinxcontrib.apidoc \
           python3-sphinx-rtd-theme python3-subunit python3-testtools \
           python3-virtualenv swig uuid-dev
-        pwd
-        ls
+        echo "current directory:" `pwd`
     - name: Checkout git repo
       uses: actions/checkout@v2
     - name: Compile
       run: |
-        make CROSS_COMPILE=aarch64-none-elf- x96max-plus_defconfig
-        make CROSS_COMPILE=aarch64-none-elf-
+        make CROSS_COMPILE=aarch64-linux-gnu- odroid-c2_defconfig -j4
+        make CROSS_COMPILE=aarch64-linux-gnu- -j4
