--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,6 +56,7 @@ jobs:
     - name: Release
       uses: ncipollo/release-action@main
       with:
-        artifacts: out/*
+        tag: v1
+        artifacts: uboot.bin
         allowUpdates: true
         token: ${{ secrets.GITHUB_TOKEN }}
