--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,7 +50,7 @@ jobs:
       uses: actions/checkout@v2
     - name: Compile
       run: |
-        make CROSS_COMPILE=aarch64-linux-gnu- KBUILD_OUTPUT=out odroid-c2_defconfig -j4
+        make CROSS_COMPILE=aarch64-linux-gnu- KBUILD_OUTPUT=out p212_M17_defconfig -j4
         make CROSS_COMPILE=aarch64-linux-gnu- KBUILD_OUTPUT=out -j4
         echo "output files:" `ls out/`
     - name: Release
