add dtb to release

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,6 +57,6 @@ jobs:
       uses: ncipollo/release-action@main
       with:
         tag: v1
-        artifacts: out/u-boot.bin
+        artifacts: out/u-boot.bin out/u-boot.dtb
         allowUpdates: true
         token: ${{ secrets.GITHUB_TOKEN }}
